--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/express-winston": "^4.0.0",
     "@types/node": "^14.0.27",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^5.0.0-alpha.7",
-    "typescript": "^3.9.7"
+    "express-winston": "^4.0.5",
+    "typescript": "^3.9.7",
+    "winston": "^3.3.3",
+    "winston-transport-sentry-node": "^0.6.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
