--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/express": "^4.17.7",
     "@types/express-winston": "^4.0.0",
     "@types/node": "^14.0.27",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.4",
     "@types/pg-format": "^1.0.0",
     "compression": "^1.7.4",
@@ -40,6 +42,8 @@
     "dotenv": "^8.2.0",
     "express": "^5.0.0-alpha.7",
     "express-winston": "^4.0.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
     "pg-format": "^1.0.4",
     "reflect-metadata": "^0.1.13",
