--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/madisapsalon/node-rest-api-ts#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
@@ -37,6 +38,8 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.4",
     "@types/pg-format": "^1.0.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
